unpackaged/objects/Test__c.object
<CustomObject>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TestCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestNumber__c</fullName>
        <label>TestNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>